tests/golden/live_example_dev/live_example_dev/live_example_dev/vshn-airlock-dev-01/CiliumNetworkPolicy-allow-ingress-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-world
  namespace: vshn-airlock-dev-01
spec:
  endpointSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: vshn-airlock-dev-01
      microgateway.airlock.com/managedBy: ''
  ingress:
    - fromEntities:
        - world
