tests/golden/live_example_dev/live_example_dev/live_example_dev/vshn-airlock-dev-01/CiliumNetworkPolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vshn-airlock-dev-01
  namespace: vshn-airlock-dev-01
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            dns.operator.openshift.io/daemonset-dns: default
            k8s:io.kubernetes.pod.namespace: openshift-dns
    - toPorts:
        - ports:
            port: '5353'
            protocol: UDP
        - rules:
            dns:
              - matchPattern: '*'
  endpointSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: vshn-airlock-dev-01
      microgateway.airlock.com/managedBy: ''
  ingress:
    - fromEntities:
        - world
