tests/golden/live_example_dev/live_example_dev/live_example_dev/vshn-airlock-dev-01/Gateway-vshn-airlock-dev-01.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    airlock-microgateway.appuio.io/httproute-default-cluster-issuer: digicert-ev
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: vshn-airlock-dev-01
  namespace: vshn-airlock-dev-01
spec:
  gatewayClassName: microgateway-cloudscale
  infrastructure:
    parametersRef:
      group: microgateway.airlock.com
      kind: GatewayParameters
      name: vshn-airlock-dev-01
  listeners:
    - name: http-default
      port: 80
      protocol: HTTP
