tests/golden/live_example_dev/live_example_dev/live_example_dev/vshn-airlock-dev-01/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
  namespace: vshn-airlock-dev-01
spec:
  hostnames:
    - '*.customer.ch'
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: vshn-airlock-dev-01
      sectionName: http-default
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
      matches:
        - method: GET
          path:
            type: PathPrefix
            value: /
