tests/golden/live_example_dev/live_example_dev/live_example_dev/vshn-airlock-dev-01/PodDisruptionBudget.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    gateway.networking.k8s.io/gateway-name: vshn-airlock-dev-01
  name: vshn-airlock-dev-01
  namespace: vshn-airlock-dev-01
spec:
  minAvailable: 1
  selector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: vshn-airlock-dev-01
  unhealthyPodEvictionPolicy: IfHealthyBudget
