tests/golden/live_example_dev/live_example_dev/live_example_dev/vshn-airlock-dev-01/RedisProvider.yaml
apiVersion: microgateway.airlock.com/v1alpha1
kind: RedisProvider
metadata:
  name: redis-provider
  namespace: vshn-airlock-dev-01
spec:
  auth:
    password:
      secretRef:
        name: redis-password
    username: default
  mode:
    standalone:
      host: redis-master.vshn-redis-redis-58ztv.svc.cluster.local
      port: 6379
  timeouts:
    connect: 10s
    maxDuration: 2s
  tls:
    certificateVerification:
      custom:
        trustedCA:
          certificates:
            - secretRef:
                name: redis-ca
    clientCertificate:
      secretRef:
        name: redis-clientcert
