tests/golden/live_example_dev/live_example_dev/live_example_dev/vshn-airlock-dev-01/SessionHandling.yaml
apiVersion: microgateway.airlock.com/v1alpha1
kind: SessionHandling
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: redis-session
  namespace: vshn-airlock-dev-01
spec:
  cookie:
    name: CUSTOMER_SESS
  defaultTimeouts:
    idle: 135m
    lifetime: 735m
  mode: Enforce
  persistence:
    redisProviderRef:
      name: redis-provider
